--- a/src/Main.fxml
+++ b/src/Main.fxml
@@ -6,18 +6,18 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="397.0" prefWidth="517.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="397.0" prefWidth="517.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.Controller">
    <children>
       <AnchorPane layoutX="-133.0" layoutY="-158.0" prefHeight="215.0" prefWidth="266.0" />
-      <Button layoutX="140.0" layoutY="257.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="239.0" text="Login">
+      <Button layoutX="140.0" layoutY="257.0" mnemonicParsing="false" onAction="#Login" prefHeight="25.0" prefWidth="239.0" text="Login">
          <font>
             <Font name="Segoe UI Light" size="12.0" />
          </font></Button>
-      <TextField fx:id="UserID" layoutX="139.0" layoutY="150.0" prefHeight="32.0" prefWidth="239.0" promptText="User ID">
+      <TextField fx:id="userIDField" layoutX="139.0" layoutY="150.0" prefHeight="32.0" prefWidth="239.0" promptText="User ID">
          <font>
             <Font name="Segoe UI Light" size="12.0" />
          </font></TextField>
-      <TextField fx:id="Password" layoutX="139.0" layoutY="199.0" prefHeight="32.0" prefWidth="239.0" promptText="Password" />
+      <TextField fx:id="passwordField" layoutX="139.0" layoutY="199.0" prefHeight="32.0" prefWidth="239.0" promptText="Password" />
       <Text fx:id="Title" layoutX="151.0" layoutY="114.0" strokeType="OUTSIDE" strokeWidth="0.0" text="DocHub Admin" wrappingWidth="216.0">
          <font>
             <Font name="Segoe UI Light" size="32.0" />
