--- a/src/Hub.fxml
+++ b/src/Hub.fxml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="300.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.DashboardController">
+
+<AnchorPane maxHeight="500" maxWidth="500" minHeight="-Infinity" minWidth="-Infinity" prefHeight="585.0" prefWidth="848.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label layoutX="155.0" layoutY="142.0" text="Welcome to the Dashboard!" />
+      <Button layoutX="36.0" layoutY="158.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="152.0" text="New Patient Record" />
+      <Button layoutX="36.0" layoutY="239.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="152.0" text="Add Diagnosis Info" />
+      <Button layoutX="36.0" layoutY="326.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="152.0" text="Veiw Patient Record" />
+      <Button layoutX="14.0" layoutY="517.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="152.0" text="Logout" />
    </children>
 </AnchorPane>
