--- a/src/Hub.fxml
+++ b/src/Hub.fxml
@@ -1,14 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
-
+<?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="500" maxWidth="500" minHeight="-Infinity" minWidth="-Infinity" prefHeight="585.0" prefWidth="848.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Button layoutX="36.0" layoutY="158.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="152.0" text="New Patient Record" />
-      <Button layoutX="36.0" layoutY="239.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="152.0" text="Add Diagnosis Info" />
-      <Button layoutX="36.0" layoutY="326.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="152.0" text="Veiw Patient Record" />
+      <Button layoutX="192.0" layoutY="216.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="462.0" text="New Patient Record" />
+      <Button layoutX="192.0" layoutY="305.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="462.0" text="Add Diagnosis Info" />
+      <Button layoutX="192.0" layoutY="393.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="462.0" text="View Patient Record" />
       <Button layoutX="14.0" layoutY="517.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="152.0" text="Logout" />
+      <Label layoutX="355.0" layoutY="56.0" text="MediHub">
+         <font>
+            <Font name="Segoe UI" size="33.0" />
+         </font>
+      </Label>
+      <Label layoutX="417.0" layoutY="97.0" prefHeight="20.0" prefWidth="74.0" text="DashBoard">
+         <font>
+            <Font name="Segoe UI Light Italic" size="14.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
