--- a/bin/NewRecord.fxml
+++ b/bin/NewRecord.fxml
@@ -6,14 +6,13 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="500" maxWidth="500" minHeight="-Infinity" minWidth="-Infinity" prefHeight="585.0" prefWidth="848.0" fx:controller="application.HubController" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="500" maxWidth="500" minHeight="-Infinity" minWidth="-Infinity" prefHeight="585.0" prefWidth="848.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" >
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#d8f7ff" height="585.0" layoutX="-2.0" stroke="BLACK" strokeType="INSIDE" width="199.0" />
-      <Button layoutX="22.0" layoutY="227.0" mnemonicParsing="false" prefHeight="66.0" prefWidth="152.0" text="New Record" onAction="#showNewRecord"/>
-      <Button layoutX="22.0" layoutY="307.0" mnemonicParsing="false" prefHeight="66.0" prefWidth="152.0" text="Add Diagnosis Info" onAction="#showAddInfo"/>
-      <Button layoutX="22.0" layoutY="150.0" mnemonicParsing="false" prefHeight="66.0" prefWidth="152.0" text="Quick View"  onAction="#showQuickView" />
+      <Button layoutX="22.0" layoutY="227.0" mnemonicParsing="false" prefHeight="66.0" prefWidth="152.0" text="New Record" />
+      <Button layoutX="22.0" layoutY="307.0" mnemonicParsing="false" prefHeight="66.0" prefWidth="152.0" text="Add Diagnosis Info" onAction="#showAddInfo" />
+      <Button layoutX="22.0" layoutY="150.0" mnemonicParsing="false" prefHeight="66.0" prefWidth="152.0" text="Quick View" onAction="#showQuickView"/>
       <Button layoutX="14.0" layoutY="530.0" mnemonicParsing="false" prefHeight="41.0" prefWidth="128.0" text="Logout" />
-      <Button layoutX="22.0" layoutY="384.0" mnemonicParsing="false" prefHeight="66.0" prefWidth="152.0" text="Appointments" onAction="#showAppointments"/>
       <Label layoutX="30.0" layoutY="24.0" text="MediHub">
          <font>
             <Font name="Segoe UI" size="33.0" />
@@ -25,6 +24,6 @@
          </font>
       </Label>
       <Button layoutX="22.0" layoutY="384.0" mnemonicParsing="false" prefHeight="66.0" prefWidth="152.0" text="Appointments" />
+      <Label layoutX="402.0" layoutY="199.0" text="test" />
    </children>
 </AnchorPane>
-
