--- a/bin/AddInfo.fxml
+++ b/bin/AddInfo.fxml
@@ -2,17 +2,19 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="500" maxWidth="500" minHeight="-Infinity" minWidth="-Infinity" prefHeight="585.0" prefWidth="848.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" >
+<AnchorPane maxHeight="500" maxWidth="500" minHeight="-Infinity" minWidth="-Infinity" prefHeight="585.0" prefWidth="848.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#d8f7ff" height="585.0" layoutX="-2.0" stroke="BLACK" strokeType="INSIDE" width="199.0" />
-      <Button layoutX="22.0" layoutY="227.0" mnemonicParsing="false" prefHeight="66.0" prefWidth="152.0" text="New Record" onAction="#showNewRecord" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#d8f7ff" height="585.0" layoutX="-2.0" stroke="#cdf5ff" strokeType="INSIDE" width="199.0" />
+      <Button layoutX="22.0" layoutY="227.0" mnemonicParsing="false" onAction="#showNewRecord" prefHeight="66.0" prefWidth="152.0" text="New Record" />
       <Button layoutX="22.0" layoutY="307.0" mnemonicParsing="false" prefHeight="66.0" prefWidth="152.0" text="Add Diagnosis Info" />
-      <Button layoutX="22.0" layoutY="150.0" mnemonicParsing="false" prefHeight="66.0" prefWidth="152.0" text="Quick View" />
-      <Button layoutX="14.0" layoutY="530.0" mnemonicParsing="false" prefHeight="41.0" prefWidth="128.0" text="Logout" />
+      <Button layoutX="22.0" layoutY="150.0" mnemonicParsing="false" onAction="#showQuickView" prefHeight="66.0" prefWidth="152.0" text="Quick View" />
+      <Button layoutX="14.0" layoutY="530.0" mnemonicParsing="false" onAction="#logout" prefHeight="41.0" prefWidth="128.0" text="Logout" />
       <Label layoutX="30.0" layoutY="24.0" text="MediHub">
          <font>
             <Font name="Segoe UI" size="33.0" />
@@ -23,7 +25,19 @@
             <Font name="Segoe UI Light Italic" size="14.0" />
          </font>
       </Label>
-      <Button layoutX="22.0" layoutY="384.0" mnemonicParsing="false" prefHeight="66.0" prefWidth="152.0" text="Appointments" />
-      <Label layoutX="402.0" layoutY="199.0" text="test2" />
+      <Rectangle fx:id="subtitlerec" arcHeight="5.0" arcWidth="5.0" fill="#cdf5ff" height="66.0" layoutX="222.0" layoutY="15.0" stroke="#cdf5ff" strokeLineCap="ROUND" strokeType="INSIDE" width="260.0" />
+<Rectangle fx:id="mainviewbox" arcHeight="5.0" arcWidth="5.0" fill="#cdf5ff" height="465.0" layoutX="222.0" layoutY="94.0" stroke="#cdf5ff" strokeLineCap="ROUND" strokeType="INSIDE" width="597.0" />
+
+      <Label fx:id="subtitlelabel" layoutX="242.0" layoutY="25.0" prefHeight="45.0" prefWidth="222.0" text="Add Patient Info">
+         <font>
+            <Font name="Segoe UI" size="30.0" />
+         </font>
+         </Label> 
+      <Button layoutX="22.0" layoutY="384.0" mnemonicParsing="false" onAction="#showAppointments" prefHeight="66.0" prefWidth="152.0" text="Appointments" />
+      <TextField layoutX="272.0" layoutY="150.0" />
+      <TextField layoutX="437.0" layoutY="150.0" />
+      <TextField layoutX="609.0" layoutY="150.0" />
+      <TextArea layoutX="272.0" layoutY="207.0" prefHeight="283.0" prefWidth="490.0" />
+      
    </children>
 </AnchorPane>
