--- a/bin/Main.fxml
+++ b/bin/Main.fxml
@@ -3,11 +3,33 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.paint.Color?>
+<?import javafx.scene.paint.LinearGradient?>
+<?import javafx.scene.paint.Stop?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
 <AnchorPane prefHeight="397.0" prefWidth="517.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.Controller">
    <children>
+      <Rectangle arcHeight="5.0" arcWidth="5.0" height="313.0" layoutX="53.0" layoutY="42.0" stroke="BLACK" strokeType="INSIDE" width="397.0">
+         <fill>
+            <LinearGradient endY="1.0" startX="0.17061611374407584" startY="0.11374407582938388">
+               <stops>
+                  <Stop>
+                     <color>
+                        <Color red="0.8039215803146362" green="0.9607843160629272" blue="1.0" />
+                     </color>
+                  </Stop>
+                  <Stop offset="1.0">
+                     <color>
+                        <Color red="1.0" green="1.0" blue="1.0" />
+                     </color>
+                  </Stop>
+               </stops>
+            </LinearGradient>
+         </fill>
+      </Rectangle>
       <AnchorPane layoutX="-133.0" layoutY="-158.0" prefHeight="215.0" prefWidth="266.0" />
       <Button layoutX="140.0" layoutY="257.0" mnemonicParsing="false" onAction="#Login" prefHeight="25.0" prefWidth="239.0" text="Login">
          <font>
@@ -18,7 +40,7 @@
             <Font name="Segoe UI Light" size="12.0" />
          </font></TextField>
       <TextField fx:id="passwordField" layoutX="139.0" layoutY="199.0" prefHeight="32.0" prefWidth="239.0" promptText="Password" />
-      <Text fx:id="Title" layoutX="151.0" layoutY="114.0" strokeType="OUTSIDE" strokeWidth="0.0" text="DocHub Admin" wrappingWidth="216.0">
+      <Text fx:id="Title" fontSmoothingType="LCD" layoutX="151.0" layoutY="114.0" strokeType="OUTSIDE" strokeWidth="0.0" text="DocHub Admin" wrappingWidth="216.0">
          <font>
             <Font name="Segoe UI Light" size="32.0" />
          </font>
