--- a/src/Appointments.fxml
+++ b/src/Appointments.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -14,9 +15,8 @@
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#d8f7ff" height="585.0" layoutX="-2.0" stroke="#cdf5ff" strokeType="INSIDE" width="199.0" />
       <Button layoutX="22.0" layoutY="227.0" mnemonicParsing="false" onAction="#showNewRecord" prefHeight="66.0" prefWidth="152.0" text="New Record" />
       <Button layoutX="22.0" layoutY="307.0" mnemonicParsing="false" onAction="#showAddInfo" prefHeight="66.0" prefWidth="152.0" text="Add Diagnosis Info" />
-      <Button layoutX="22.0" layoutY="150.0" mnemonicParsing="false" prefHeight="66.0" prefWidth="152.0" text="Quick View" />
+      <Button layoutX="22.0" layoutY="150.0" mnemonicParsing="false" onAction="#showQuickView" prefHeight="66.0" prefWidth="152.0" text="Quick View" />
       <Button layoutX="14.0" layoutY="530.0" mnemonicParsing="false" onAction="#logout" prefHeight="41.0" prefWidth="128.0" text="Logout" />
-      <Button layoutX="22.0" layoutY="384.0" mnemonicParsing="false" onAction="#showAppointments" prefHeight="66.0" prefWidth="152.0" text="Appointments" />
       <Label layoutX="30.0" layoutY="24.0" text="MediHub">
          <font>
             <Font name="Segoe UI" size="33.0" />
@@ -27,23 +27,26 @@
             <Font name="Segoe UI Light Italic" size="14.0" />
          </font>
       </Label>
-      <Rectangle fx:id="subtitlerec" arcHeight="5.0" arcWidth="5.0" fill="#cdf5ff" height="66.0" layoutX="222.0" layoutY="15.0" stroke="#cdf5ff" strokeLineCap="ROUND" strokeType="INSIDE" width="274.0" />
-<Rectangle fx:id="mainviewbox" arcHeight="5.0" arcWidth="5.0" fill="#cdf5ff" height="465.0" layoutX="223.0" layoutY="94.0" stroke="#cdf5ff" strokeLineCap="ROUND" strokeType="INSIDE" width="597.0" />
+       <Rectangle fx:id="subtitlerec" arcHeight="5.0" arcWidth="5.0" fill="#cdf5ff" height="66.0" layoutX="222.0" layoutY="15.0" stroke="#cdf5ff" strokeLineCap="ROUND" strokeType="INSIDE" width="232.0" />
+<Rectangle fx:id="mainviewbox" arcHeight="5.0" arcWidth="5.0" fill="#cdf5ff" height="465.0" layoutX="222.0" layoutY="94.0" stroke="#cdf5ff" strokeLineCap="ROUND" strokeType="INSIDE" width="597.0" />
 
-      <Label fx:id="subtitlelabel" layoutX="232.0" layoutY="26.0" prefHeight="45.0" prefWidth="255.0" text="Patient Quick View">
+      <Label fx:id="subtitlelabel" layoutX="242.0" layoutY="25.0" prefHeight="45.0" prefWidth="199.0" text="Appointments">
          <font>
             <Font name="Segoe UI" size="30.0" />
-         </font>
-         </Label>
-      <Button layoutX="22.0" layoutY="384.0" mnemonicParsing="false" onAction="#showAppointments" prefHeight="66.0" prefWidth="152.0" text="Appointments" />
-      <TableView layoutX="258.0" layoutY="193.0" prefHeight="335.0" prefWidth="528.0">
+         </font></Label>
+      <Button layoutX="22.0" layoutY="384.0" mnemonicParsing="false" prefHeight="66.0" prefWidth="152.0" text="Appointments" />
+      <DatePicker layoutX="267.0" layoutY="204.0" prefHeight="20.0" prefWidth="199.0" />
+      <TextField layoutX="267.0" layoutY="150.0" />
+      <TextField layoutX="441.0" layoutY="150.0" />
+      <TextField layoutX="608.0" layoutY="150.0" />
+      <TextField layoutX="479.0" layoutY="204.0" prefHeight="25.0" prefWidth="80.0" />
+      <TextField layoutX="582.0" layoutY="204.0" prefHeight="25.0" prefWidth="176.0" />
+      <TableView layoutX="270.0" layoutY="273.0" prefHeight="200.0" prefWidth="492.0">
         <columns>
-          <TableColumn prefWidth="40.0" text="Date" />
-          <TableColumn prefWidth="110.0" text="Contents" />
+          <TableColumn prefWidth="75.0" text="Date" />
+          <TableColumn prefWidth="75.0" text="Name" />
         </columns>
       </TableView>
-      <TextField layoutX="257.0" layoutY="138.0" promptText="First" />
-      <TextField layoutX="424.0" layoutY="138.0" promptText="Last" />
-      <TextField layoutX="594.0" layoutY="138.0" promptText="(123)-456-7890" />
+   
    </children>
 </AnchorPane>
