--- a/bin/Main.fxml
+++ b/bin/Main.fxml
@@ -2,28 +2,32 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.paint.LinearGradient?>
 <?import javafx.scene.paint.Stop?>
+<?import javafx.scene.shape.Line?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="397.0" prefWidth="517.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.Controller">
+<AnchorPane prefHeight="405.0" prefWidth="684.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.Controller">
    <children>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" height="313.0" layoutX="53.0" layoutY="42.0" stroke="BLACK" strokeType="INSIDE" width="397.0">
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="408.0" layoutX="328.0" stroke="WHITE" strokeType="INSIDE" width="356.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" height="415.0" layoutY="-6.0" stroke="WHITE" strokeType="INSIDE" width="328.0">
          <fill>
-            <LinearGradient endY="1.0" startX="0.17061611374407584" startY="0.11374407582938388">
+            <LinearGradient endX="1.0" endY="1.0" startY="1.0">
                <stops>
                   <Stop>
                      <color>
-                        <Color red="0.8039215803146362" green="0.9607843160629272" blue="1.0" />
+                        <Color red="1.0" green="1.0" blue="1.0" />
                      </color>
                   </Stop>
                   <Stop offset="1.0">
                      <color>
-                        <Color red="1.0" green="1.0" blue="1.0" />
+                        <Color red="0.5098039507865906" green="0.7254902124404907" blue="0.8666666746139526" />
                      </color>
                   </Stop>
                </stops>
@@ -31,19 +35,25 @@
          </fill>
       </Rectangle>
       <AnchorPane layoutX="-133.0" layoutY="-158.0" prefHeight="215.0" prefWidth="266.0" />
-      <Button layoutX="140.0" layoutY="257.0" mnemonicParsing="false" onAction="#Login" prefHeight="25.0" prefWidth="239.0" text="Login">
+      <Button layoutX="444.0" layoutY="276.0" mnemonicParsing="false" onAction="#Login" prefHeight="25.0" prefWidth="110.0" text="Login">
          <font>
             <Font name="Segoe UI Light" size="12.0" />
          </font></Button>
-      <TextField fx:id="userIDField" layoutX="139.0" layoutY="150.0" prefHeight="32.0" prefWidth="239.0" promptText="User ID">
+      <TextField fx:id="userIDField" layoutX="380.0" layoutY="144.0" prefHeight="32.0" prefWidth="239.0" promptText="User ID">
          <font>
             <Font name="Segoe UI Light" size="12.0" />
          </font></TextField>
-      <TextField fx:id="passwordField" layoutX="139.0" layoutY="199.0" prefHeight="32.0" prefWidth="239.0" promptText="Password" />
-      <Text fx:id="Title" fontSmoothingType="LCD" layoutX="151.0" layoutY="114.0" strokeType="OUTSIDE" strokeWidth="0.0" text="DocHub Admin" wrappingWidth="216.0">
+      <TextField fx:id="passwordField" layoutX="380.0" layoutY="196.0" prefHeight="32.0" prefWidth="239.0" promptText="Password" />
+      <Text fx:id="Title" fontSmoothingType="LCD" layoutX="391.0" layoutY="92.0" strokeType="OUTSIDE" strokeWidth="0.0" text="DocHub Admin" wrappingWidth="216.0">
          <font>
             <Font name="Segoe UI Light" size="32.0" />
          </font>
       </Text>
+      <Line endX="-100.0" endY="-195.0" layoutX="428.0" layoutY="195.0" startX="-100.0" startY="213.5" stroke="#a4a4a4" />
+      <ImageView fitHeight="200.0" fitWidth="200.0" layoutX="64.0" layoutY="88.0">
+         <image>
+            <Image url="@loginlogo.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
