--- a/bin/Appointments.fxml
+++ b/bin/Appointments.fxml
@@ -7,6 +7,7 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Line?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
@@ -19,7 +20,7 @@
       <Button layoutX="14.0" layoutY="530.0" mnemonicParsing="false" onAction="#logout" prefHeight="41.0" prefWidth="128.0" text="Logout" />
       <Label layoutX="30.0" layoutY="24.0" text="MediHub">
          <font>
-            <Font name="Segoe UI" size="33.0" />
+            <Font name="Segoe UI light" size="33.0" />
          </font>
       </Label>
       <Label layoutX="30.0" layoutY="65.0" prefHeight="20.0" prefWidth="74.0" text="DashBoard">
@@ -32,21 +33,47 @@
 
       <Label fx:id="subtitlelabel" layoutX="242.0" layoutY="25.0" prefHeight="45.0" prefWidth="199.0" text="Appointments">
          <font>
-            <Font name="Segoe UI" size="30.0" />
+            <Font name="Segoe UI light" size="30.0" />
          </font></Label>
       <Button layoutX="22.0" layoutY="384.0" mnemonicParsing="false" prefHeight="66.0" prefWidth="152.0" text="Appointments" />
-      <DatePicker layoutX="267.0" layoutY="204.0" prefHeight="20.0" prefWidth="199.0" />
-      <TextField layoutX="267.0" layoutY="150.0" />
-      <TextField layoutX="441.0" layoutY="150.0" />
-      <TextField layoutX="608.0" layoutY="150.0" />
-      <TextField layoutX="479.0" layoutY="204.0" prefHeight="25.0" prefWidth="80.0" />
-      <TextField layoutX="582.0" layoutY="204.0" prefHeight="25.0" prefWidth="176.0" />
-      <TableView layoutX="270.0" layoutY="273.0" prefHeight="200.0" prefWidth="492.0">
+      <DatePicker layoutX="266.0" layoutY="248.0" prefHeight="20.0" prefWidth="199.0" />
+      <TextField layoutX="267.0" layoutY="182.0" promptText="First Name" />
+      <TextField layoutX="432.0" layoutY="183.0" prefHeight="25.0" prefWidth="159.0" promptText="Last Name" />
+      <TextField layoutX="600.0" layoutY="183.0" promptText="(123)-4567-890" />
+      <TextField layoutX="590.0" layoutY="248.0" prefHeight="25.0" prefWidth="168.0" />
+      <TableView layoutX="270.0" layoutY="317.0" prefHeight="200.0" prefWidth="492.0">
         <columns>
           <TableColumn prefWidth="75.0" text="Date" />
           <TableColumn prefWidth="75.0" text="Name" />
         </columns>
       </TableView>
+      <Label fx:id="subtitlelabel1" layoutX="266.0" layoutY="150.0" prefHeight="41.0" prefWidth="144.0" text="Enter Patient Identifiers">
+         <font>
+            <Font name="Segoe UI Light" size="14.0" />
+         </font>
+      </Label>
+      <Label fx:id="subtitlelabel11" layoutX="590.0" layoutY="216.0" prefHeight="41.0" prefWidth="118.0" text="Reason For Visit">
+         <font>
+            <Font name="Segoe UI Light" size="14.0" />
+         </font>
+      </Label>
+      <Label fx:id="subtitlelabel111" layoutX="266.0" layoutY="216.0" prefHeight="41.0" prefWidth="118.0" text="Date ">
+         <font>
+            <Font name="Segoe UI Light" size="14.0" />
+         </font>
+      </Label>
+      <TextField layoutX="477.0" layoutY="248.0" prefHeight="25.0" prefWidth="87.0" />
+      <Label fx:id="subtitlelabel1111" layoutX="479.0" layoutY="216.0" prefHeight="41.0" prefWidth="74.0" text="Time ">
+         <font>
+            <Font name="Segoe UI Light" size="14.0" />
+         </font>
+      </Label>
+      <Label fx:id="subtitlelabel12" layoutX="242.0" layoutY="109.0" prefHeight="41.0" prefWidth="193.0" text="Create New Appointment">
+         <font>
+            <Font name="Segoe UI Light" size="18.0" />
+         </font>
+      </Label>
+      <Line endX="-138.0" endY="510.0" layoutX="335.0" layoutY="75.0" startX="-138.0" startY="-75.0" stroke="#a4a4a4" />
    
    </children>
 </AnchorPane>
