--- a/bin/Hub.fxml
+++ b/bin/Hub.fxml
@@ -2,15 +2,16 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.paint.Color?>
-<?import javafx.scene.paint.LinearGradient?>
-<?import javafx.scene.paint.Stop?>
+<?import javafx.scene.shape.Line?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="500" maxWidth="500" minHeight="-Infinity" minWidth="-Infinity" prefHeight="585.0" prefWidth="848.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.HubController">
    <children>
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#d8f7ff" height="74.0" layoutX="215.0" layoutY="23.0" stroke="#a4a4a4" strokeType="INSIDE" width="334.0" />
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#d8f7ff" height="585.0" layoutX="-2.0" stroke="#d8f7ff" strokeType="INSIDE" width="199.0" />
       <Button layoutX="22.0" layoutY="227.0" mnemonicParsing="false" onAction="#showNewRecord" prefHeight="66.0" prefWidth="152.0" text="New Record" />
       <Button layoutX="22.0" layoutY="307.0" mnemonicParsing="false" onAction="#showAddInfo" prefHeight="66.0" prefWidth="152.0" text="Add Diagnosis Info" />
@@ -19,7 +20,7 @@
       <Button layoutX="22.0" layoutY="384.0" mnemonicParsing="false" onAction="#showAppointments" prefHeight="66.0" prefWidth="152.0" text="Appointments" />
       <Label layoutX="30.0" layoutY="24.0" text="MediHub">
          <font>
-            <Font name="Segoe UI" size="33.0" />
+            <Font name="Segoe UI light" size="33.0" />
          </font>
       </Label>
       <Label layoutX="30.0" layoutY="65.0" prefHeight="20.0" prefWidth="74.0" text="DashBoard">
@@ -28,27 +29,21 @@
          </font>
       </Label>
       <Button layoutX="22.0" layoutY="384.0" mnemonicParsing="false" onAction="#showAppointments" prefHeight="66.0" prefWidth="152.0" text="Appointments" />
-      <Rectangle fx:id="welcomeBox" arcHeight="5.0" arcWidth="5.0" height="351.0" layoutX="287.0" layoutY="124.0" opacity="0.98" stroke="BLACK" strokeType="INSIDE" width="390.0">
-         <fill>
-            <LinearGradient endX="0.07582938388625593" endY="1.0" startX="1.0">
-               <stops>
-                  <Stop>
-                     <color>
-                        <Color red="1.0" green="1.0" blue="1.0" />
-                     </color>
-                  </Stop>
-                  <Stop offset="1.0">
-                     <color>
-                        <Color red="0.8470588326454163" green="0.9686274528503418" blue="1.0" />
-                     </color>
-                  </Stop>
-               </stops>
-            </LinearGradient>
-         </fill>
-      </Rectangle>
-      <Label fx:id="welcomeLabel" layoutX="342.0" layoutY="255.0" prefHeight="75.0" prefWidth="281.0" text="Welcome Back Admin">
+      <Line endX="-138.0" endY="510.0" layoutX="335.0" layoutY="75.0" startX="-138.0" startY="-75.0" stroke="#a4a4a4" />
+      <TableView editable="true" layoutX="500.0" layoutY="273.0" prefHeight="284.0" prefWidth="328.0">
+        <columns>
+          <TableColumn prefWidth="75.0" text="Name" />
+          <TableColumn prefWidth="75.0" text="Date" />
+        </columns>
+      </TableView>
+      <Label layoutX="500.0" layoutY="250.0" prefHeight="20.0" prefWidth="142.0" text="Upcoming Appointments">
          <font>
-            <Font name="Segoe UI Light" size="29.0" />
+            <Font name="Segoe UI Light" size="12.0" />
+         </font>
+      </Label>
+      <Label layoutX="223.0" layoutY="36.0" prefHeight="49.0" prefWidth="356.0" text="Welcome Back, Admin">
+         <font>
+            <Font name="Segoe UI Light" size="33.0" />
          </font>
       </Label>
    </children>
